# aoc2015

./: .gitignore  .ocamlformat  aoc2015.opam  day01.ml  day02.ml  day04.ml  dune-project  run.sh  tools.ml  tools.mli
day01/: day01.ml  dune
day02/: day02.ml  dune
day03/: day03.ml  dune
day04/: dune
day05/: day05.ml  dune
day06/: day06.ml  dune
day07/: day07.ml  dune
day08/: day08.ml  dune
day09/: day09.ml  dune
day10/: day10.ml  dune
day11/: day11.ml  dune
day12/: day12.ml  dune
day13/: day13.ml  dune
day14/: day14.ml  dune
day15/: day15.ml  dune
day16/: day16.ml  dune
day17/: dune  main.ml
day18/: main.ml
day20/: main.ml
template/: run.sh
tools/: dune  tools.ml  tools.mli
